Renaming a custom property removes its animation keys #125426

Closed
opened 2024-07-25 16:22:03 +02:00 by Yegor · 2 comments

System Information
Operating system: Linux-5.14.0-284.11.1.el9_2.x86_64-x86_64-with-glibc2.34 64 Bits, X11 UI
Graphics card: Quadro RTX 4000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01

Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548ad
Worked: never

Short description of error
Renaming removes keys, but if you rename back, the keys are back.
There might be a design issue rather than a literal bug, but still. I suspect that Blender creates an another property with the given new name and substitutes the previous one. That's why the keys come back if you rename back.
A user expects renaming only, keeping the rest data associated with the prop intact.

Exact steps for others to reproduce the error
In the attached file a key is set on the custom property. Rename the property -> the key will vanish.
Rename the property back -> the key is back.

**System Information** Operating system: Linux-5.14.0-284.11.1.el9_2.x86_64-x86_64-with-glibc2.34 64 Bits, X11 UI Graphics card: Quadro RTX 4000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 **Blender Version** Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: `a51f293548ad` Worked: never **Short description of error** Renaming removes keys, but if you rename back, the keys are back. There might be a design issue rather than a literal bug, but still. I suspect that Blender creates an another property with the given new name and substitutes the previous one. That's why the keys come back if you rename back. A user expects renaming only, keeping the rest data associated with the prop intact. **Exact steps for others to reproduce the error** In the attached file a key is set on the custom property. Rename the property -> the key will vanish. Rename the property back -> the key is back.
Yegor added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-25 16:22:04 +02:00
Iliya Katushenock added the
Interest
Animation & Rigging
Interest
Python API
labels 2024-07-25 18:39:18 +02:00
Member

I believe this is expected behaviour since the animation records properties via property paths, changing the name caused the path to be no longer matching.

I do believe we can implement something that updates animation tracks when custom properties are renamed, but that might also not be desirable, since that way we'll need to handle duplicated names silently.

I believe this is expected behaviour since the animation records properties via property paths, changing the name caused the path to be no longer matching. I do believe we can implement something that updates animation tracks when custom properties are renamed, but that might also not be desirable, since that way we'll need to handle duplicated names silently.
YimingWu added
Module
Animation & Rigging
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2024-07-26 07:35:36 +02:00
Member

OK I found the issue where this is having problem.

WM_OT_properties_edit is a python operator. We need to expose BKE_animdata_fix_paths_rename to bpy in order to be able to do this.

OK I found the issue where this is having problem. `WM_OT_properties_edit` is a python operator. We need to expose `BKE_animdata_fix_paths_rename` to bpy in order to be able to do this.
YimingWu added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2024-07-26 09:56:49 +02:00
YimingWu was assigned by Christoph Lendenfeld 2024-08-13 10:48:30 +02:00
Bart van der Braak added
Type
Bug
and removed
Type
Report
labels 2024-08-14 12:54:54 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-15 13:56:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125426
No description provided.