source/blender/makesrna/intern/rna_ID.cc
@@ -218,6 +218,7 @@ const IDFilterEnumPropertyItem rna_enum_id_type_filter_items[] = {
 #  include "BLO_readfile.hh"
 
 #  include "BKE_anim_data.hh"
+#  include "BKE_animsys.h"
 #  include "BKE_global.hh" /* XXX, remove me */
 #  include "BKE_idprop.hh"
 #  include "BKE_idtype.hh"
@@ -651,6 +652,14 @@ void rna_ID_extra_user_set(PointerRNA *ptr, bool value)
   else {
     id_us_clear_real(id);
   }
+}
+
+void rna_id_animdata_fix_paths_rename_all(struct ID *id,
+                                                      const char *prefix,
+                                                      const char *oldName,
+                                                      const char *newName)
+{
+  BKE_animdata_fix_paths_rename_all(id, prefix, oldName, newName);
 }
 
 IDProperty **rna_PropertyGroup_idprops(PointerRNA *ptr)
@@ -1553,6 +1562,7 @@ static void rna_def_ID_properties(BlenderRNA *brna)
 {
   StructRNA *srna;
   PropertyRNA *prop;
+  FunctionRNA *func;
 
   /* this is struct is used for holding the virtual
    * PropertyRNA's for ID properties */
@@ -2511,6 +2521,14 @@ static void rna_def_ID(BlenderRNA *brna)
   parm = RNA_def_pointer(
       func, "preview_image", "ImagePreview", "", "The existing or created preview");
   RNA_def_function_return(func, parm);
+
+  func = RNA_def_function(
+      srna, "fix_paths_rename_all", "rna_id_animdata_fix_paths_rename_all");
+  RNA_def_string(func, "prefix", 0, 128, "Prefix", "Name prefix");
+  RNA_def_string(func, "old_name", 0, 128, "Old Name", "Old name");
+  RNA_def_string(func, "new_name", 0, 128, "New Name", "New name");
+  RNA_def_function_ui_description(func, "Rename animation properties");
+  //RNA_def_function_flag(func, FUNC_USE_SELF_ID);
 
 #  ifdef WITH_PYTHON
   RNA_def_struct_register_funcs(srna, nullptr, nullptr, "rna_ID_instance");
