scripts/startup/bl_operators/wm.py
@@ -1886,6 +1886,11 @@ class WM_OT_properties_edit(Operator):
 
         self._update_blender_for_prop_change(context, item, name, prop_type_old, prop_type_new)
 
+        if name_old != name:
+            adt = getattr(item, "animation_data", None)
+            if adt is not None:
+                adt.fix_paths_rename_all(prefix="", old_name=name_old, new_name=name)
+
         return {'FINISHED'}
 
     def invoke(self, context, _event):
